package ast.expressions;

import ast.root.AstNode;

public interface Expression extends AstNode {}
