package ast.root;

public enum AstNodeType {
  ASSIGNMENT_EXPRESSION,
  CALL_EXPRESSION,
  EXPRESSION_STATEMENT,
  VARIABLE_DECLARATION,
  IDENTIFIER,
  NUMBER_LITERAL,
  STRING_LITERAL,
  BINARY_EXPRESSION
}
