package parsers;

import static exceptions.ExceptionMessageBuilder.getExceptionMessage;

import ast.root.AstNode;
import ast.root.Program;
import exceptions.SyntaxException;
import exceptions.UnsupportedStatementException;
import java.util.ArrayList;
import java.util.List;
import observers.Observer;
import observers.Progressable;
import parsers.statements.AssignmentParser;
import parsers.statements.CallFunctionParser;
import parsers.statements.StatementParser;
import parsers.statements.VariableDeclarationParser;
import token.Position;
import token.Token;
import token.types.TokenTagType;

public class Parser implements Progressable {
  private final List<StatementParser> statementParsers;
  private final List<Observer> observers;
  private int totalStatements;

  public Parser(List<Observer> observers) {
    this.statementParsers =
        List.of(new CallFunctionParser(), new VariableDeclarationParser(), new AssignmentParser());
    this.observers = observers;
  }

  public Parser() {
    this.statementParsers =
        List.of(new CallFunctionParser(), new VariableDeclarationParser(), new AssignmentParser());
    this.observers = List.of();
  }

  public Program parse(List<Token> tokens) {
    List<List<Token>> statements = splitBySemicolon(tokens);

    List<AstNode> astNodes = new ArrayList<>();

    StatementParser parser;

    totalStatements = statements.size();

    for (List<Token> statement : statements) {
      parser = getValidParser(statement);
      AstNode astNode = parser.parse(statement);
      astNodes.add(astNode);
      updateProgress();
    }
    Position start = tokens.get(0).getInitialPosition();
    Position end = tokens.get(tokens.size() - 1).getFinalPosition();

    return new Program(astNodes, start, end);
  }

  private static List<List<Token>> splitBySemicolon(List<Token> tokens) {
    List<List<Token>> result = new ArrayList<>();
    List<Token> currentSublist = new ArrayList<>();

    for (Token token : tokens) {
      if (token.getType() == TokenTagType.SEMICOLON) {
        result.add(new ArrayList<>(currentSublist));
        currentSublist.clear();
      } else {
        currentSublist.add(token);
      }
    }

    // Checks if the statement ends with a semicolon
    Token lastToken = tokens.get(tokens.size() - 1);

    if (lastToken.getType() != TokenTagType.SEMICOLON) {
      String message = getExceptionMessage(lastToken.getValue(), tokens.size(), 1);
      throw new SyntaxException("expected ';' but got: " + message);
    }

    return result;
  }

  private StatementParser getValidParser(List<Token> statement) {
    for (StatementParser statementParser : statementParsers) {
      if (statementParser.shouldParse(statement)) {
        return statementParser;
      }
    }

    Token token = statement.get(0);
    Position position = token.getInitialPosition();
    String exceptionMessage = getExceptionMessage(token.getValue(), position.row(), position.col());
    throw new UnsupportedStatementException(exceptionMessage);
  }

  private void updateProgress() {
    if (observers != null) {
      notifyObservers();
    }
  }

  @Override
  public float getProgress() {
    return ((float) 1 / totalStatements) * 100;
  }

  @Override
  public void notifyObservers() {
    for (Observer observer : observers) {
      observer.update(this);
    }
  }
}
